overflow bug fix

--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -19,7 +19,7 @@
 
 /* 2222 */
 #gallerybox{
-    background: #000;
+
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
   
